# tashio

./: README.md  pyproject.toml  setup.cfg
src/tashio_data/: get_data.py  main.py
test/: conftest.py  test_get_data.py
tf/: main.tf  terraform.tfvars  variables.tf
