[metadata]
name = tashio_data
version = 0.1.0
author = Stefanos Karathanassis
author_email = stefanos.karathanassis@outlook.com
description = A package to analyze Dublin property data using DuckDB.

[options]
packages = find:
install_requires =
    duckdb>=0.8.1
    yfinance==0.2.54

[options.extras_require]
dev =
    pytest>=6.0
    ruff

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    dublin-analysis = dublin_analysis_duckdb.main:main
